# hashdog

./: .gitignore  Makefile  README.md  argParser.c  bruteforce.c  bruteforce.h  bruteforceAtk.c  checkDigest.h  complexJson.json  config  config.json  config.txt  config.yaml  dict.txt  dictAtk.c  dictAtk.h  functions.h  main.c  make.sh  md5.c  md5.h  meson.build  new_main.c  test.json  testalgo.c  testmd5.c
data/: com.byteseb.Duel.appdata.xml.in  com.byteseb.Duel.desktop.in  com.byteseb.Duel.gschema.xml  meson.build
data/icons/: meson.build
functions/: argParser.c  arguments.c  bruteforce.c  checkDigest.c  config.c  configParser.c  dictAtk.c  md5.c
po/: POTFILES  meson.build
src/: duel-application.c  duel-application.h  duel-window.c  duel-window.h  duel-window.ui  duel.gresource.xml  main.c  meson.build
